--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <!--Grid column-->
             <div class="col-md-12 mb-4 mb-md-0">
               <!--Image-->
-              <div class="view overlay z-depth-1-half">
+              <div class="view overlay">
                 <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg" class="img-fluid wow jackInTheBox" alt="photo">
                 <a class="js-scroll-trigger" href="#page-top">
                   <div class="mask rgba-white-light"></div>
@@ -215,7 +215,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-12 mb-4">
           <!--Card-->
-          <div class="card wow bounceInLeft">
+          <div class="card wow fadeInLeftBig">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/xord-icon.jpg" class="img-fluid card-img-top" alt="xord-icon">
@@ -240,7 +240,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
           <!--Card-->
-          <div class="card wow bounceInDown">
+          <div class="card wow fadeInDownBig">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/tpc-icon.jpg" class="img-fluid card-img-top" alt="tpc-icon">
@@ -265,7 +265,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
           <!--Card-->
-          <div class="card wow bounceInRight">
+          <div class="card wow fadeInRightBig">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/inkuneko-icon.jpg" class="img-fluid card-img-top" alt="inkuneko-icon">
@@ -294,7 +294,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-12 mb-4">
           <!--Card-->
-          <div class="card wow bounceInLeft">
+          <div class="card wow fadeInLeftBig">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/uamivr-icon.jpg" class="img-fluid card-img-top" alt="uamivr-icon">
@@ -319,7 +319,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
           <!--Card-->
-          <div class="card wow bounceInUp">
+          <div class="card wow fadeInUpBig">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/quimiuami-icon.jpg" class="img-fluid card-img-top" alt="quimiuami-icon">
@@ -345,7 +345,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
           <!--Card-->
-          <div class="card wow bounceInRight">
+          <div class="card wow fadeInRightBig">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/edulandar-icon.jpg" class="img-fluid card-img-top" alt="edulandar-icon">
@@ -455,13 +455,13 @@
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3 list-unstyled">
       <ul class="list-inline hoverable-text">
-        <li class="list-inline-item wow bounceInUp">
+        <li class="list-inline-item">
           <a href="http://soufunstudio.com">© 2020 Copyright: soufunstudio.com</a>
         </li>
         <li class="list-inline-item">
-          <img src="img/brand/soufun-solid-logo.png" class="img-fluid wow rotateIn" alt="soufun-solid-logo"></a>
+          <img src="img/brand/soufun-solid-logo.png" class="img-fluid" alt="soufun-solid-logo"></a>
         </li>
-        <li class="list-inline-item wow bounceInUp">
+        <li class="list-inline-item">
           <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">Sen font is licensed under the OFL.</a>
         </li>
       </ul>
