implement index.html view

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <!--Grid row-->
       <div class="row">
         <!--Grid column-->
-        <div class="col-lg-4 col-md-12 mb-4">
+        <div class="col-lg-4 col-md-4 mb-4">
           <!--Card-->
           <div class="card wow fadeInLeftBig">
             <!--Card image-->
@@ -238,7 +238,7 @@
         <!--Grid column-->
 
         <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-4 mb-4">
           <!--Card-->
           <div class="card wow fadeInDownBig">
             <!--Card image-->
@@ -263,7 +263,7 @@
         <!--Grid column-->
 
         <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-4 mb-4">
           <!--Card-->
           <div class="card wow fadeInRightBig">
             <!--Card image-->
@@ -292,7 +292,7 @@
       <!--Grid row-->
       <div class="row">
         <!--Grid column-->
-        <div class="col-lg-4 col-md-12 mb-4">
+        <div class="col-lg-4 col-md-4 mb-4">
           <!--Card-->
           <div class="card wow fadeInLeftBig">
             <!--Card image-->
@@ -317,7 +317,7 @@
         <!--Grid column-->
 
         <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-4 mb-4">
           <!--Card-->
           <div class="card wow fadeInUpBig">
             <!--Card image-->
@@ -343,7 +343,7 @@
         <!--Grid column-->
 
         <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-4 mb-4">
           <!--Card-->
           <div class="card wow fadeInRightBig">
             <!--Card image-->
@@ -385,22 +385,22 @@
         <!-- Grid column -->
         <div class="col-md-6 mt-md-0 mt-3">
           <!-- Content -->
-          <h5 class="text-uppercase wow bounceInLeft">Connect with us! <i class="fas fa-heart red-text mx-1"></i> </h5>
+          <h5 class="text-uppercase">Connect with us! <i class="fas fa-heart red-text mx-1"></i> </h5>
           <!-- Grid column -->
           <div class="col-md-12 py-4">
             <div class="mb-5 hoverable-icon">
 
               <!-- Facebook -->
               <a class="fb-ic" href="https://www.facebook.com/soufunstudio/" target="_blank">
-                <i class="fab fa-facebook fa-lg mr-md-5 mr-3 fa-2x wow rollIn"></i>
+                <i class="fab fa-facebook fa-lg mr-md-5 mr-3 fa-2x"></i>
               </a>
               <!-- Twitter -->
               <a class="tw-ic" href="https://twitter.com/SouFUNStudio" target="_blank">
-                <i class="fab fa-twitter fa-lg mr-md-5 mr-3 fa-2x wow rollIn"></i>
+                <i class="fab fa-twitter fa-lg mr-md-5 mr-3 fa-2x"></i>
               </a>
               <!-- Instagram -->
               <a class="ins-ic" href="https://www.instagram.com/soufunstudio/" target="_blank">
-                <i class="fab fa-instagram fa-lg mr-md-5 mr-3 fa-2x wow rollIn"></i>
+                <i class="fab fa-instagram fa-lg mr-md-5 mr-3 fa-2x"></i>
               </a>
             </div>
           </div>
@@ -411,8 +411,8 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5 class="text-uppercase wow bounceInRight">Contact Us</h5>
-          <ul class="list-unstyled hoverable-text wow fadeInUp">
+          <h5 class="text-uppercase">Contact Us</h5>
+          <ul class="list-unstyled hoverable-text">
             <li>
               <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
             </li>
@@ -430,8 +430,8 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5 class="wow bounceInRight">SouFunStudio</h5>
-          <ul class="list-unstyled hoverable-text wow fadeInUp">
+          <h5>SouFunStudio</h5>
+          <ul class="list-unstyled hoverable-text">
             <li>
               <a href="frontend/commons/privacy_policy.html">Privacy policy</a>
             </li>
