implement index.html view

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       </div>
 
       <!--Grid row-->
-      <div class="row">
+      <div class="row d-flex justify-content-center">
         <!--Grid column-->
         <div class="col-lg-4 col-md-4 mb-4">
           <!--Card-->
@@ -290,7 +290,7 @@
       <!--Grid row-->
 
       <!--Grid row-->
-      <div class="row">
+      <div class="row d-flex justify-content-center">
         <!--Grid column-->
         <div class="col-lg-4 col-md-4 mb-4">
           <!--Card-->
