implement index.html view

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="preloader-inner position-relative">
         <div class="preloader-circle"></div>
         <div class="preloader-img">
-          <img src="img/brand/soufun-preloader.png" class="animated rubberBand faster infinite" alt="load-soufun-logo">
+          <img src="img/brand/soufun-preloader.png" class="animated rubberBand fast infinite" alt="load-soufun-logo">
         </div>
       </div>
     </div>
