--- a/frontend/games/inkuneko_ar.html
+++ b/frontend/games/inkuneko_ar.html
@@ -35,7 +35,7 @@
       <div class="preloader-inner position-relative">
         <div class="preloader-circle"></div>
         <div class="preloader-img">
-          <img src="/img/brand/soufun-brand.png" class="spin-loader" alt="load-soufun-logo">
+          <img src="/img/brand/soufun-preloader.png" class="spin-loader" alt="load-soufun-logo">
         </div>
       </div>
     </div>
