disable blog and store views

--- a/frontend/commons/privacy_policy.html
+++ b/frontend/commons/privacy_policy.html
@@ -73,10 +73,10 @@
               <a class="nav-link waves-effect" href="/services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/blog.html">Blog</a>
+              <a class="nav-link waves-effect disabled" href="/blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="/store.html">Store</a>
+              <a class="nav-link waves-effect disabled" href="/store.html">Store</a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-effect" href="/contact.html">Contact</a>
