--- a/contact.html
+++ b/contact.html
@@ -73,10 +73,10 @@
               <a class="nav-link waves-effect" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="blog.html">Blog</a>
+              <a class="nav-link waves-effect disabled" href="blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="store.html">Store</a>
+              <a class="nav-link waves-effect disabled" href="store.html">Store</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link waves-effect teal lighten-2 rounded js-scroll-trigger" href="#page-top">Contact<span class="sr-only">(current)</span></a>
