create xord.html view and js for validation contact form

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/xord-icon.jpg" class="img-fluid card-img-top" alt="xord-icon">
-              <a href="http://xord.soufunstudio.com">
+              <a href="frontend/games/xord.html">
                 <div class="mask rgba-red-light"></div>
               </a>
             </div>
@@ -230,7 +230,7 @@
               <!--Text-->
               <p class="card-text black-text">A 2D casual game, available for Android,
                 protects the helpless gelatux.</p>
-              <a href="http://xord.soufunstudio.com" target="_blank" class="btn btn-outline-soufun waves-effect">GO FUN!</a>
+              <a href="frontend/games/xord.html" class="btn btn-outline-soufun waves-effect">GO FUN!</a>
             </div>
           </div>
           <!--/.Card-->
