--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
           <!-- Left -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="index.html">Games</a>
+              <a class="nav-link waves-effect" href="/">Games</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link waves-effect teal lighten-2 rounded js-scroll-trigger" href="#page-top">About us<span class="sr-only">(current)</span></a>
