--- a/services.html
+++ b/services.html
@@ -61,7 +61,7 @@
           <!-- Left -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link waves-effect" href="index.html">Games</a>
+              <a class="nav-link waves-effect" href="/">Games</a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-effect" href="about.html">About us</a>
