--- a/es/index.html
+++ b/es/index.html
@@ -411,7 +411,7 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5 class="text-uppercase">Contáctenos</h5>
+          <h5 class="text-uppercase">Contáctanos</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
               <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
