change languages reference paths

--- a/es/about.html
+++ b/es/about.html
@@ -193,8 +193,8 @@
               <!--Grid column-->
               <div class="col-md-9 p-5">
                 <h2 class="text-center text-white mb-4 pb-2">Vision</h2>
-                <p class="lead text-center text-white w-responsive mx-auto mb-3">Be the leading study in the development of
-                  video games, virtual and augmented reality in Mexico.</p>
+                <p class="lead text-center text-white w-responsive mx-auto mb-3">Ser el estudio líder en el desarrollo de
+                  videojuegos, realidad virtual y aumentada en México.</p>
               </div>
               <!--Grid column-->
             </div>
@@ -205,9 +205,9 @@
               <!--Grid column-->
               <div class="col-md-9 p-5 text-center">
                 <!-- Section heading -->
-                <h2 class="text-center text-white mb-4 pb-2">Our team</h2>
+                <h2 class="text-center text-white mb-4 pb-2">Nuestro equipo</h2>
                 <!-- Section description -->
-                <p class="lead w-responsive text-white mx-auto">Know a little more about us, what we like to do and what we do.</p>
+                <p class="lead w-responsive text-white mx-auto">Conoce un poco más sobre nosotros, lo que nos gusta hacer y lo que hacemos en general.</p>
               </div>
               <!--Grid column-->
             </div>
@@ -246,12 +246,12 @@
                       <!-- Content -->
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">German Pérez</h4>
-                        <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
+                        <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Fundador</h6>
                         <h6><a href="mailto:germanperez@soufunstudio.com" class="font-weight-bold dark-grey-text small">germanperez@soufunstudio.com</a></h6>
-                        <p><small class=" text-muted">Unity developer</small></p>
+                        <p><small class=" text-muted">Desarrollador Unity</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-1">
-                          <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
+                          <i class="fas fa-redo-alt grey-text mr-2"></i>Más Info</a>
                       </div>
                     </div>
                     <!-- Front Side -->
@@ -261,12 +261,12 @@
                       <div class="card-body">
                         <!-- Content -->
                         <h4 class="font-weight-bold mt-4 mb-2">
-                          <strong>About me</strong>
+                          <strong>Sobre mí</strong>
                         </h4>
                         <hr>
-                        <p>Passionate about languages ​​and also programming languages. My strengths are
-                          Unity, Blender and Substance Painter, java and python. Programming is an art in which
-                          the limit is your imagination.
+                        <p>Apasionado por los idiomas y también por los lenguajes de programación. Mis fortalezas son
+                          Unity, Blender y Substance Painter, java y python. La programación es un arte en el que
+                          el límite es tu imaginación.
                         </p>
                         <hr>
                         <!-- Social Icons -->
@@ -294,7 +294,7 @@
                         </ul>
                         <!-- Triggering button -->
                         <a class="rotate-btn text-white" data-card="card-1">
-                          <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
+                          <i class="fas fa-redo-alt text-white mr-2"></i>Regresar</a>
                       </div>
                     </div>
                     <!-- Back Side -->
@@ -325,12 +325,12 @@
                       <!-- Content -->
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">Roberto Torres</h4>
-                        <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
+                        <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Fundador</h6>
                         <h6><a href="mailto:robertotorres@soufunstudio.com" class="font-weight-bold dark-grey-text small">robertotorres@soufunstudio.com</a></h6>
-                        <p><small class="text-muted">Unity developer</small></p>
+                        <p><small class="text-muted">Desarrollador Unity</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-2">
-                          <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
+                          <i class="fas fa-redo-alt grey-text mr-2"></i>Más Info</a>
                       </div>
                     </div>
                     <!-- Front Side -->
@@ -340,11 +340,11 @@
                       <div class="card-body">
                         <!-- Content -->
                         <h4 class="font-weight-bold mt-4 mb-2">
-                          <strong>About me</strong>
+                          <strong>Sobre mí</strong>
                         </h4>
                         <hr>
-                        <p>Game Developer, program whatever it takes to create
-                          amazing things. I'm good at Unity 3D, Java, Python.
+                        <p>Desarrollador de videojuegos, programo lo que sea necesario para crear
+                          Cosas asombrosas. Soy bueno en Unity 3D, Java, Python.
                         </p>
                         <hr>
                         <!-- Social Icons -->
@@ -372,7 +372,7 @@
                         </ul>
                         <!-- Triggering button -->
                         <a class="rotate-btn text-white" data-card="card-2">
-                          <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
+                          <i class="fas fa-redo-alt text-white mr-2"></i>Regresar</a>
                       </div>
                     </div>
                     <!-- Back Side -->
@@ -400,12 +400,12 @@
                       <!-- Content -->
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">Elizabeth Librado</h4>
-                        <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
+                        <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Fundadora</h6>
                         <h6><a href="mailto:eli.so.12@soufunstudio.com" class="font-weight-bold dark-grey-text small">eli.so.12@soufunstudio.com</a></h6>
-                        <p><small class="text-muted">Graphic Designer</small></p>
+                        <p><small class="text-muted">Diseñadora Gráfica</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-3">
-                          <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
+                          <i class="fas fa-redo-alt grey-text mr-2"></i>Más Info</a>
                       </div>
                     </div>
                     <!-- Front Side -->
@@ -415,12 +415,12 @@
                       <div class="card-body">
                         <!-- Content -->
                         <h4 class="font-weight-bold mt-4 mb-2">
-                          <strong>About me</strong>
+                          <strong>Sobre mí</strong>
                         </h4>
                         <hr>
-                        <p>My favorite programs are Photoshop, 2D Tupi, Paintool Sai and After Effects.
-                          I love Kirby and Crash animation and games, love reading science fiction and i am in love
-                          with music in vinyl format.
+                        <p>Mis programas favoritos son Photoshop, 2D Tupi, Paintool Sai y After Effects.
+                          Amo la animación y los juegos de Kirby y Crash, leer ciencia ficción y estoy enamorada
+                          de la musica en formato vinilo.
                         </p>
                         <hr>
                         <!-- Social Icons -->
@@ -438,7 +438,7 @@
                         </ul>
                         <!-- Triggering button -->
                         <a class="rotate-btn text-white" data-card="card-3">
-                          <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
+                          <i class="fas fa-redo-alt text-white mr-2"></i>Regresar</a>
                       </div>
                     </div>
                     <!-- Back Side -->
@@ -470,12 +470,12 @@
                       <!-- Content -->
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">Keyla Ávila</h4>
-                        <h6 class="font-weight-bold dark-grey-text">SouFUN Artist</h6>
+                        <h6 class="font-weight-bold dark-grey-text">Artista en SouFUN</h6>
                         <h6><a href="mailto:keylavila@soufunstudio.com" class="font-weight-bold dark-grey-text small">keylavila@soufunstudio.com</a></h6>
-                        <p><small class="text-muted">SouFUN Graphic Designer and Illustrator</small></p>
+                        <p><small class="text-muted">Diseñadora Gráfica e Illustradora</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-4">
-                          <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
+                          <i class="fas fa-redo-alt grey-text mr-2"></i>Más Info</a>
                       </div>
                     </div>
                     <!-- Front Side -->
@@ -485,11 +485,11 @@
                       <div class="card-body">
                         <!-- Content -->
                         <h4 class="font-weight-bold mt-4 mb-2">
-                          <strong>About me</strong>
+                          <strong>Sobre mí</strong>
                         </h4>
                         <hr>
-                        <p>I like to give Photoshop, Illustrator, InDesign, Blender,
-                          Krita and CCS. Fascinated by Art Concept, always willing to learn.
+                        <p>Me gusta darle a Photoshop, Illustrator, InDesign, Blender,
+                          Krita y CCS. Fascinada por el Arte Conceptual, siempre dispuesta a aprender.
                         </p>
                         <hr>
                         <!-- Social Icons -->
@@ -502,7 +502,7 @@
                         </ul>
                         <!-- Triggering button -->
                         <a class="rotate-btn text-white" data-card="card-4">
-                          <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
+                          <i class="fas fa-redo-alt text-white mr-2"></i>Regresar</a>
                       </div>
                     </div>
                     <!-- Back Side -->
@@ -530,12 +530,12 @@
                       <!-- Content -->
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">Victor Sarabia</h4>
-                        <h6 class="font-weight-bold dark-grey-text">SouFUN Artist</h6>
+                        <h6 class="font-weight-bold dark-grey-text">Artista en SouFUN</h6>
                         <h6><a href="mailto:dgsarabia@soufunstudio.com" class="font-weight-bold dark-grey-text small">dgsarabia@soufunstudio.com</a></h6>
-                        <p><small class="text-muted">Multimedia Designer</small></p>
+                        <p><small class="text-muted">Diseñador Multimedia</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-5">
-                          <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
+                          <i class="fas fa-redo-alt grey-text mr-2"></i>Más Info</a>
                       </div>
                     </div>
                     <!-- Front Side -->
@@ -545,12 +545,12 @@
                       <div class="card-body">
                         <!-- Content -->
                         <h4 class="font-weight-bold mt-4 mb-2">
-                          <strong>About me</strong>
+                          <strong>Sobre mí</strong>
                         </h4>
                         <hr>
-                        <p>I move better in Photoshop, Illustrator and After Effects.
-                          My specialty is Photo Editing. Lover of the universe, I enjoy sports, nature,
-                          books and waste hours playing a good shooter.
+                        <p>Me muevo mejor en Photoshop, Illustrator y After Effects.
+                          Mi especialidad es la Edicion Fotográfica. Amante del universo, Me gustan los deportes, la naturaleza,
+                          los libros y gastando horas jugando un buen shooter.
                         </p>
                         <hr>
                         <!-- Social Icons -->
@@ -563,7 +563,7 @@
                         </ul>
                         <!-- Triggering button -->
                         <a class="rotate-btn text-white" data-card="card-5">
-                          <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
+                          <i class="fas fa-redo-alt text-white mr-2"></i>Regresar</a>
                       </div>
                     </div>
                     <!-- Back Side -->
@@ -595,7 +595,7 @@
         <!-- Grid column -->
         <div class="col-md-6 mt-md-0 mt-3">
           <!-- Content -->
-          <h5 class="text-uppercase">Connect with us! <i class="fas fa-heart red-text mx-1"></i> </h5>
+          <h5 class="text-uppercase">Conéctate con nosotros! <i class="fas fa-heart red-text mx-1"></i> </h5>
           <!-- Grid column -->
           <div class="col-md-12 py-4">
             <div class="mb-5 hoverable-icon">
@@ -621,7 +621,7 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5 class="text-uppercase">Contact Us</h5>
+          <h5 class="text-uppercase">Contáctanos</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
               <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
@@ -640,16 +640,16 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5>SouFunStudio</h5>
+          <h5>SouFun Studio</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
-              <a href="frontend/commons/privacy_policy.html">Privacy policy</a>
+              <a href="frontend/commons/privacy_policy.html">Política de privacidad</a>
             </li>
             <li>
-              <a href="frontend/commons/terms_of_use.html">Terms of use</a>
+              <a href="frontend/commons/terms_of_use.html">Términos de uso</a>
             </li>
             <li>
-              <a href="contact.html">Sitemap</a>
+              <a href="contact.html">Mapa del sitio</a>
             </li>
             <li>
               <a href="frontend/info/faqs.html">FAQ</a>
@@ -669,10 +669,10 @@
           <a href="http://soufunstudio.com">© 2020 Copyright: soufunstudio.com</a>
         </li>
         <li class="list-inline-item">
-          <img src="img/brand/soufun-solid-logo.png" class="img-fluid" alt="soufun-solid-logo"></a>
+          <img src="/img/brand/soufun-solid-logo.png" class="img-fluid" alt="soufun-solid-logo"></a>
         </li>
         <li class="list-inline-item">
-          <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">Sen font is licensed under the OFL.</a>
+          <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">La fuente Sen tiene licencia bajo OFL.</a>
         </li>
       </ul>
     </div>
