--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
               <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-language"></i> Language </a>
               <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-                <a class="dropdown-item" href="http://soufunstudio.com/es">Spanish</a>
-                <a class="dropdown-item" href="http://soufunstudio.com/jp">Japanese</a>
+                <a class="dropdown-item" href="es">Español</a>
+                <a class="dropdown-item" href="jp">日本語</a>
               </div>
             </li>
           </ul>
@@ -430,7 +430,7 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5>SouFunStudio</h5>
+          <h5>SouFun Studio</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
               <a href="frontend/commons/privacy_policy.html">Privacy policy</a>
