implemented spanish language

--- a/es/about.html
+++ b/es/about.html
@@ -682,18 +682,18 @@
   <!-- End your project here-->
 
   <!-- jQuery -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="/js/jquery.min.js"></script>
   <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="js/popper.min.js"></script>
+  <script type="text/javascript" src="/js/popper.min.js"></script>
   <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="/js/mdb.min.js"></script>
   <!-- Plugin JavaScript -->
-  <script type="text/javascript" src="js/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="/js/jquery.easing.min.js"></script>
   <!-- Custom scripts (optional) -->
-  <script type="text/javascript" src="js/new-age.min.js"></script>
-  <script type="text/javascript" src="js/yanger.js"></script>
+  <script type="text/javascript" src="/js/new-age.min.js"></script>
+  <script type="text/javascript" src="/js/yanger.js"></script>
 
   <!--Modal: modalCookie-->
   <div class="modal fade bottom cookieModal" id="cookieModal" tabindex="-1" role="dialog" aria-labelledby="cookieModalLabel" aria-hidden="true" data-backdrop="true">
@@ -704,10 +704,10 @@
         <div class="modal-body">
           <div class="row d-flex justify-content-center align-items-center">
 
-            <p class="pt-3 pr-2 white-text">We use cookies to improve your website experience</p>
+            <p class="pt-3 pr-2 white-text">Utilizamos cookies para mejorar la experiencia del sitio web.</p>
 
-            <a type="button" href="frontend/commons/privacy_statement.html" class="btn btn-outline-cookies waves-effect">Learn more<i class="fas fa-book ml-1"></i></a>
-            <a type="button" id="cookieModalConsent" class="btn btn-outline-cookies waves-effect" data-dismiss="modal">Ok, thanks</a>
+            <a type="button" href="frontend/commons/privacy_statement.html" class="btn btn-outline-cookies waves-effect">Saber más<i class="fas fa-book ml-1"></i></a>
+            <a type="button" id="cookieModalConsent" class="btn btn-outline-cookies waves-effect" data-dismiss="modal">Si, gracias</a>
           </div>
         </div>
       </div>
@@ -715,7 +715,7 @@
     </div>
   </div>
   <!--Modal: modalCookie-->
-  <script type="text/javascript" src="js/cookie-consent.js"></script>
+  <script type="text/javascript" src="/js/cookie-consent.js"></script>
 
 
 </body>
