--- a/es/index.html
+++ b/es/index.html
@@ -278,8 +278,8 @@
               <!--Title-->
               <h4 class="card-title black-text">Inkuneko AR</h4>
               <!--Text-->
-              <p class="card-text black-text">Inkuneko AR, es una aplicación que
-                dará vida a tus camisas.</p>
+              <p class="card-text black-text">Inkuneko AR, es una aplicación con realidad aumentada que
+                dará vida a tus camisas, desbloquea nuevos diseños y diviértete.</p>
               <a href="frontend/games/inkuneko_ar.html" class="btn btn-outline-soufun waves-effect">DIVIERTETE!</a>
             </div>
           </div>
@@ -308,7 +308,7 @@
               <h4 class="card-title black-text">UAM-I VR</h4>
               <!--Text-->
               <p class="card-text black-text">Surge para que más personas conozcan la universidad UAM
-                Iztapalapa de una manera innovadora y divertida.</p>
+                Iztapalapa de una manera innovadora y divertida en un entorno 3D interactivo.</p>
               <a href="frontend/games/uami_vr.html" class="btn btn-outline-soufun waves-effect">DIVIERTETE!</a>
             </div>
           </div>
