implemented spanish language

--- a/es/about.html
+++ b/es/about.html
@@ -549,8 +549,8 @@
                         </h4>
                         <hr>
                         <p>Me muevo mejor en Photoshop, Illustrator y After Effects.
-                          Mi especialidad es la Edicion Fotográfica. Amante del universo, Me gustan los deportes, la naturaleza,
-                          los libros y gastando horas jugando un buen shooter.
+                          Mi especialidad es la Edicion Fotográfica. Amante del universo, me gustan los deportes, la naturaleza,
+                          los libros y gastar horas jugando un buen shooter.
                         </p>
                         <hr>
                         <!-- Social Icons -->
