correct some traduction issues

--- a/services.html
+++ b/services.html
@@ -175,8 +175,7 @@
           <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4 pt-5">Services</h6>
           <h3 class="font-weight-bold text-center text-white pb-2">Our Services</h3>
           <hr class="w-header my-4">
-          <p class="lead text-center text-white pt-2 mb-5">Join thousands of satisfied customers using our template
-            globally.</p>
+          <p class="lead text-center text-white pt-2 mb-5">These are some of the services that we offer our clients</p>
 
           <!--Grid row-->
           <div class="row d-flex justify-content-center">
