implemented spanish language

--- a/es/projects.html
+++ b/es/projects.html
@@ -42,7 +42,7 @@
 
   <!-- Start of project here-->
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_LA/sdk.js#xfbml=1&version=v7.0"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v7.0"></script>
   <!--Main Navigation-->
   <header id="page-top">
     <!-- Navbar -->
@@ -86,7 +86,7 @@
               <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-language"></i> Lenguaje </a>
               <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-                <a class="dropdown-item" href="/es">Spanish</a>
+                <a class="dropdown-item" href="/">English</a>
                 <a class="dropdown-item" href="/jp">日本語</a>
               </div>
             </li>
@@ -171,7 +171,7 @@
 
         <!-- Section: Projects Content -->
         <section class="text-white text-center">
-          <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4 pt-5">Projects</h6>
+          <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4 pt-5">Proyectos</h6>
           <h3 class="font-weight-bold mb-4 pb-2">Nuestros Proyectos Actuales</h3>
           <p class="lead text-white-50 w-responsive mx-auto mb-5">Estos son los proyectos que todavía tenemos en desarrollo
             para algunos de nuestros clientes, pero te invitamos a echarles un vistazo y conocer más sobre ellos, también algunos de estos
