correct social to socialmedia email

--- a/contact.html
+++ b/contact.html
@@ -280,7 +280,7 @@
                     <i class="fas fa-envelope fa-lg"></i>
                   </a>
                   <p class="pt-3">contact@soufunstudio.com</p>
-                  <p class="mb-0">social@soufunstudio.com</p>
+                  <p class="mb-0">socialmedia@soufunstudio.com</p>
                 </div>
               </div>
             </div>
